--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>homee</h1>
+
+    <section>
+        <%if(locals.user){%>
+            <form action="/posts/create-post" method="post">
+                <textarea name="content" cols="30" rows="3" placeholder="enter your content here"></textarea>
+                <button type="submit">Post</button>
+            </form>
+            <% } %>
+    </section>
+
+    <div class="posts">
+        <h1>Posts-</h1>
+        <ul>
+            <% for(let post of posts) {%>
+                <li>
+                    <h2>
+                        <%=post.content%>
+                    </h2>
+                    <h2>
+                        -<%=post.user.username%>
+                    </h2>
+                </li>
+                <% } %>
+        </ul>
+    </div>
 </body>
+
 </html>
