--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,52 @@
+html, body, div, span, applet, object, iframe, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
 body {
     background-color: #3FA796;
-    color: #FEC260;
+    /* color: #FEC260; */
+}
+
+/* navbar */
+.navbar {
+    width: 100%;
+    height: 40px;
+    background-color: grey;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.heading {
+    color: blue;
+    margin-top: -18px;
+}
+
+.links h2 {
+    display: inline-block;
+    margin-right: 7px;
+    margin-top: 5px;
+}
+
+.links h2 a {
+    text-decoration: none;
+    color: white;
 }
 
 h1 {
@@ -9,14 +55,18 @@ h1 {
 }
 
 /* for posts */
+#post{
+    position: relative;
+}
+
 #post form {
     display: inline-block;
-    position: absolute;
+    position: relative;
 }
 
 #post form textarea {
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 300px;
     background-color: grey;
 }
 
@@ -27,18 +77,18 @@ h1 {
     width: 65px;
     cursor: pointer;
     position: absolute;
-    margin-top:17px;
+    margin-top: 17px;
     margin-left: 15px;
     font-size: 16px;
 
 }
 
 #post h2 {
-    position: relative;
-    margin-left: 35px;
+    position: absolute;
+    margin-left: 100px;
+    margin-top: -10px;
     display: inline-block;
 }
 
 
 /* for container */
-
