--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,19 +9,27 @@
 </head>
 
 <body>
-    <h1>user profile</h1>
-    <ul>
-        <% for(let user of users_list){%>
-            <li>
-                <p>
-                    <%= user.username %>
-                </p>
-                <p>
-                    <%= user.email%>
-                </p>
-            </li>
+    <%if(locals.user.id == user_profile._id) {%>
+        <h1>Update your details: <%= user.username%>
+        </h1>
+        <form action="/users/update/<%=user_profile._id%> " method="post">
+            <label for="username">Username:</label>
+            <input type="username" name="username" id="username" placeholder="Enter your username"
+                value="<%= user_profile.username %>">
+            <br>
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" placeholder="Enter your email" value="<%= user_profile.email %>">
+            <br>
+            <button>Update</button>
+        </form>
+        <% }else{%>
+            UserName: <h1>
+                <%=user_profile.username%>
+            </h1>
+            Email: <h1>
+                <%=user_profile.email%>
+            </h1>
             <% } %>
-    </ul>
 </body>
 
 </html>
