--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -19,22 +19,24 @@ time, mark, audio, video {
 }
 
 body {
-    background-color: #3FA796;
-    /* color: #FEC260; */
+    background-color: skyblue;
+    height: 100%;
 }
 
 /* navbar */
 .navbar {
     width: 100%;
-    height: 40px;
-    background-color: grey;
+    position: absolute;
+    height: 6%;
+    background-color: darkblue;
+    color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
 .heading {
-    color: blue;
+    color: white;
     margin-top: -18px;
 }
 
@@ -51,22 +53,35 @@ body {
 
 h1 {
     text-align: center;
-    color: #2A0944;
+    color: white;
 }
 
 /* for posts */
-#post{
-    position: relative;
+#post {
+    position: absolute;
+    margin-top:4%;
+    width: 100%;
+    height: 10%;
+}
+
+#post h2 {
+    position: absolute;
+    margin-left: 26%;
+    display: inline-block;
+    color:purple;
 }
 
 #post form {
+    width: 100%;
     display: inline-block;
     position: relative;
 }
 
 #post form textarea {
+    position: relative;
     margin-top: 10px;
-    margin-left: 520px;
+    margin-left: 37%;
+    cursor: pointer;
     background-color: white;
 }
 
@@ -80,36 +95,33 @@ h1 {
     margin-top: 17px;
     margin-left: 15px;
     font-size: 16px;
-
+    font-weight: bold;
 }
-
-#post h2 {
-    position: absolute;
-    margin-left: 370px;
-    margin-top: 20px;
-    display: inline-block;
-}
-
 
 /* for container */
-
-.container{
-    margin-top: 20px;
-    width: 100%;
-    height: 100%;
+.container {
     position: absolute;
-    overflow-x: scroll;
+    margin-top: 10%;
+    width: 100%;
+    height: 79%;
     display: flex;
 }
 
-.posts{
+.posts {
     width: 65%;
     padding: 30px;
 }
 
-.users{
-    border-left: 1px solid black;
+.posts h1{
+    color:purple;
+}
+
+.users {
+    border-left: 1px solid white;
     padding: 20px;
-    /* height: 100%; */
     width: 35%;
+}
+
+.users h1{
+    color:purple;
 }
