--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
     <title>Document</title>
 </head>
 
@@ -21,6 +23,27 @@
             <button>Sign In</button>
         </form>
     </div>
+        <!-- flash msgs -->
+        <script>
+            <% if (flash.success && flash.success.length > 0) {%>
+                new Noty({
+                    theme: 'relax',
+                    text: '<%=flash.success%>',
+                    type: 'success',
+                    layout: 'topCenter',
+                    timeout: 1000,
+                }).show();
+            <% } %>
+            <% if (flash.error && flash.error.length > 0) {%>
+                new Noty({
+                    theme: 'relax',
+                    text: '<%=flash.error%>',
+                    type: 'error',
+                    layout: 'topCenter',
+                    timeout: 1000,
+                }).show();
+            <% } %>
+    </script>
 </body>
 
 </html>
